        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::dispatchDidReceiveAuthenticationChallenge):
        (WebKit::WebFrameLoaderClient::canAuthenticateAgainstProtectionSpace):

        * UIProcess/API/qt/qwkpage.cpp:

2010-12-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        The chunked update drawing area is flipped twice when drawing
        https://bugs.webkit.org/show_bug.cgi?id=50465
        <rdar://problem/8726836>

        * UIProcess/mac/ChunkedUpdateDrawingAreaProxyMac.mm:
        (WebKit::ChunkedUpdateDrawingAreaProxy::platformPaint):
        (WebKit::ChunkedUpdateDrawingAreaProxy::drawUpdateChunkIntoBackingStore):
        Flip the destination contexts, thus unflipping them. (Turns out two wrongs make a right here).

2010-12-03  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Sam Weinig.

        Need a WebKit2 Equivalent of WebSecurityOrigin
        https://bugs.webkit.org/show_bug.cgi?id=50170

        * Shared/API/c/WKBase.h:
        Add the WKSecurityOriginRef typedef.

        * Shared/APIObject.h:
        Add the SecurityOrigin type as a Shared type.

        * Shared/API/c/WKSharedAPICast.h::
        Add the mapping between WKSecurityOriginRef and WebSecurityOrigin.

        * UIProcess/API/C/WKSecurityOrigin.cpp: Added.
        (WKSecurityOriginGetTypeID):
        (WKSecurityOriginCreate):
        (WKSecurityOriginGetProtocol):
        (WKSecurityOriginGetHost):
        (WKSecurityOriginGetPort):
        * UIProcess/API/C/WKSecurityOrigin.h: Added.

        * UIProcess/WebSecurityOrigin.h: Added.
        (WebKit::WebSecurityOrigin::create):
        Create based on the database identifier, which contains the protocol, host and port.
        (WebKit::WebSecurityOrigin::protocol):
        (WebKit::WebSecurityOrigin::host):
        (WebKit::WebSecurityOrigin::port):
        (WebKit::WebSecurityOrigin::databaseIdentifier):